# dbt-sqlserver

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .yamllint.yaml  CONTRIBUTING.md  Makefile  README.md  TESTING.md  checdeletes.py  conftest.py  dagster.yaml  deployment_temp  generate_dagster_service.py  mypy.ini  pip_install_from_github.py  pyproject.toml  pytest.ini  requirements.txt  result.json  run_all_tests.py  script_repo.sh  service.service  setup.cfg  setup.py  workspace.yaml
dagster-global-gf/: README.md  pyproject.toml
dagster-global-gf/dagster_global_gf/: __init__.py  definitions.py  jobs.py  schedules.py
dagster-global-gf/dagster_global_gf/assets/: __init__.py  dbt_dwh_global.py  dbt_sources.py  dias_festivos.py  etl_dwh_sp.py  examples.py
dagster-global-gf/dagster_global_gf_tests/: conftest.py  test_definitions.py
dagster-kielsa-gf/: pyproject.toml
dagster-kielsa-gf/dagster_kielsa_gf/: definitions.py  job_control_replicas.py  jobs.py  schedules.py  sensors.py
dagster-kielsa-gf/dagster_kielsa_gf/assets/: __init__.py  analysis_services.py  cliente_general.py  dbt_dwh_kielsa.py  dbt_example.py  dbt_sources.py  dotacion_personal.py  examples.py  knime_asset_factory.py  ldcom_etl_dwh.py  ldcom_etl_dwh_sp.py  ldcom_etl_dwh_sp_config.py
dagster-kielsa-gf/dagster_kielsa_gf/assets/control_demanda/: __init__.py  forecast.py  forecast_demanda.py  limpiar_demanda.py  personal_necesario_proyectado.py
dagster-kielsa-gf/dagster_kielsa_gf/assets/control_incentivos/: README.MD  assets.py  extractores.py  ventas.sql
dagster-kielsa-gf/dagster_kielsa_gf/assets/smb_etl_dwh/: kielsa_horarios.py  kielsa_metas_excel.py
dagster-kielsa-gf/dagster_kielsa_gf/dlt_defs/: definitions.py
dagster-kielsa-gf/dagster_kielsa_gf/dlt_defs/assets/: mongodb_crm_etl_dwh.py  mongodb_ktmpro_clinicalabetl_dwh.py
dagster-kielsa-gf/dagster_kielsa_gf/sling_defs/: __init__.py  sling_ecommerse.yaml  sling_ktmpro_clinicalab.yaml  sling_nocodb_data_gf.py  sling_nocodb_schema_control.py
dagster-kielsa-gf/dagster_kielsa_gf/sms_kielsa_defs/: envio_sms.py  procesos.py
dagster-kielsa-gf/dagster_kielsa_gf_tests/: conftest.py  test_definitions.py
dagster-sap-gf/: README.md  pyproject.toml
dagster-sap-gf/dagster_sap_gf/: __init__.py  definitions.py  jobs.py  schedules.py
dagster-sap-gf/dagster_sap_gf/assets/: dbt_dwh_sap.py  dbt_sources.py  examples.py  sap_etl_dwh.py  sap_etl_dwh_sp_config.py
dagster-sap-gf/dagster_sap_gf/assets/control_demanda/: forecast_demanda.py  limpiar_demanda.py
dagster-sap-gf/dagster_sap_gf/dlt_defs/hontrack_assets/: hontrack_api.py  (+1 more)
dagster-sap-gf/dagster_sap_gf_tests/: conftest.py  test_definitions.py
dagster-sap-gf/dagster_sap_gf_tests/test_assets/: test_hontrack.py
dagster-shared-gf/: README.md  pyproject.toml
dagster-shared-gf/dagster_shared_gf/: __init__.py  config.py  load_env_run.py  shared_dagster_api.py  shared_defs.py  shared_failed_sensors.py  shared_functions.py  shared_helpers.py  shared_ops.py  shared_sensors.py  shared_variables.py
dagster-shared-gf/dagster_shared_gf/automation/: tags_mapping.py  time_based.py
dagster-shared-gf/dagster_shared_gf/dlt_shared/: dlt_resources.py  example_sql_database_tries.py  example_sql_databases.py  requirements.txt
dagster-shared-gf/dagster_shared_gf/resources/: correo_e.py  dbt_resources.py  postgresql_resources.py  smb_resources.py  sql_server_resources.py  sqlalchemy_resource.py
dagster-shared-gf/dagster_shared_gf/sling_shared/: generate_yaml.py  sling_resources.py
dagster-shared-gf/dagster_shared_gf/utils/: check_db_dependencies.py  clean_storage.py
dagster-shared-gf/dagster_shared_gf_tests/: conftest.py  test_shared_failed_sensors.py  test_shared_functions.py  test_shared_variables.py  test_time_based_automation.py
dagster-shared-gf/dagster_shared_gf_tests/examples/: test_examples.py
dagster-shared-gf/dagster_shared_gf_tests/test_resources/: test_dbt_resources.py  test_polars_excel.py  test_sql_server_resources.py
dagster-shared-gf/dagster_shared_gf_tests/test_utils/: test_clean_storage.py  test_delete_old_event_storage.py
dagster_shared_gf/: README.md  pyproject.toml  setup.cfg  setup.py
dagster_shared_gf/dagster_shared_gf/: __init__.py  assets_template.py  definitions.py  failed_sensors.py  jobs.py  labs_experimental.py  load_env_run.py  schedules.py  shared_constants.py  shared_dagster_api.py  shared_failed_sensors.py  shared_functions.py  shared_helpers.py  shared_ops.py  shared_sensors.py  shared_variables.py  utils.py
dagster_shared_gf/dagster_shared_gf/assets/: __init__.py  dbt_dwh_global.py  dbt_sources.py  dias_festivos.py  examples.py  sd.py
dagster_shared_gf/dagster_shared_gf/automation/: __init__.py  custom_conditions.py  tags_mapping.py  time_based.py
dagster_shared_gf/dagster_shared_gf/dlt_shared/: dlt_resources.py  example copy.py  example.py  example_sql_database_tries.py  example_sql_databases.py  pipeline_asset_style.py  pipeline_asset_style.py.example  sql_database_pipeline.py
dagster_shared_gf/dagster_shared_gf/partitions/: time_based.py
dagster_shared_gf/dagster_shared_gf/resources/: correo_e.py  dbt_resources.py  postgresql_resources.py  smb_resources.py  sql_server_resources.py  sqlalchemy_resource.py
dagster_shared_gf/dagster_shared_gf/sling_shared/: generate_yaml.py  sling_resources.py
dagster_shared_gf/dagster_shared_gf/utils/: check_db_dependencies.cache  check_db_dependencies.py  clean_storage.py  example.py  snake_case_normalizer.py
dagster_shared_gf/dagster_shared_gf_tests/: test_definitions.py  test_jobs.py  test_shared_constants.py  test_shared_functions.py  test_shared_helpers.py  test_shared_variables.py
dagster_shared_gf/dagster_shared_gf_tests/examples/: example_interest_calculator.py  test_examples.py
dagster_shared_gf/dagster_shared_gf_tests/test_resources/: test_correo_e.py  test_dbt_resources.py  test_excel_file.xlsx  test_polars_excel.py  test_sql_server_resources.py
dagster_shared_gf/dagster_shared_gf_tests/test_utils/: test_delete_old_event_storage.py
(+679 files in other folders)
