[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
# Rutas extra para que editores/pyright resuelvan paquetes locales si el workspace no está en la raíz.
# Mantener sincronizadas con los paquetes del monorepo.
extraPaths = [
    "./dagster-shared-gf/.venv/lib/python3.12/site-packages",
    "./dagster-global-gf/.venv/lib/python3.12/site-packages",
    "./dagster-kielsa-gf/.venv/lib/python3.12/site-packages",
    "./dagster-sap-gf/.venv/lib/python3.12/site-packages",
    "./dagster-shared-gf/",
]

# Excluir artefactos y venv para que pyright no los escanee
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "target",
]

# Let pyright resolve imports from the local packages present in the monorepo
[tool.pytest.ini_options]
env_files = [".env", ".env.test"]
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
    "ignore::DeprecationWarning:.*Pydantic V1 style `@validator` validators are deprecated..*",
    "ignore:.*Parameter `use_user_code_server` .*",
]

[tool.main_dagster]
python_version = "3.12" # Explicitly specify the required Python version

# Proyecto raíz actúa como "host runtime" (daemon/webserver) mínimo.
# Las code locations usan sus propios entornos aislados; este entorno sólo
# necesita Dagster core y servicios base. Las deps de desarrollo van en
# dependency-groups (dev/helpers) y no se instalan en despliegue (--no-dev).
[project]
name = "main-dagster-runtime"
version = "0.1.0"
description = "Minimal Dagster host runtime (webserver + daemon)"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
dependencies = [
    "dagster>=1.9.7,<1.12",
    "dagster-webserver>=1.9.7,<2.0",
    "dagster-postgres",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-sqlserver",
]

# Empty optional group so that deployment script can call
# 'uv sync --extra external' without error (root runtime has no external deps)
[project.optional-dependencies]
external = []

[tool.uv]
config-settings = { editable_mode = "compat" } # better-toml-ignore
default-groups = ["dev", "helpers"]


[tool.yamlfix]
line_lenght = 0

[dependency-groups]
dev = [
    "dash>=3.0.2",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "yamllint",
    "yamlfix",
    "pytest",
    "pytest-mock",
    "pytest-dotenv",
    "pyright",
    "ruff",
    "pre-commit",
    "prettier>=0.0.7",
    "sqlfluff",
    "sqlfluff-templater-dbt",
    #"shandy-sqlfmt", #No compatible debido que solo usa snake_case
]

helpers = ["jinja2"]

analitics = [
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "shap>=0.47.1",
    "statsforecast>=2.0.1",
    "xgboost>=3.0.0",
    "xlsxwriter>=3.2.2",
]

# ---------------------------------------------------------------------------
# Configurar los entornos a instalar en scripts/deployment.sh
