[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.dagster]
module_name = "dagster_kielsa_gf"

# Main project configuration (dagster_kielsa_gf)
[project]
name = "dagster_kielsa_gf"
version = "1.0.1"
description = "Dagster kielsa for GF"
authors = [{ name = "Axell Padilla", email = "brian.padilla@farinter.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
# Development Status :: 1 - Planning
# Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Assets Orchestration",
    "Topic :: Database",
    "Topic :: Data Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Dagster",
]

dependencies = [
    # Polars promovido a core; mantiene etl, ml, pandas. Añadimos odbc sugerido.
    "dagster_shared_gf[etl,ml,pandas,odbc,polars,mongo]",
]

[project.optional-dependencies]
external = ["dagster_shared_gf[external]"]

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-env", "mypy", "ruff", "pre-commit"]

[tool.uv.build-backend]
module-root = "."
module-name = "dagster_kielsa_gf"

[tool.setuptools]
packages = ["dagster_kielsa_gf"]

[tool.setuptools.exclude-package-data]
dagster_kielsa_gf = ["dagster_kielsa_gf_tests"]

[project.urls]
Repository = "https://github.com/farinter-analitica/main-dagster"

[tool.uv.sources.dagster_shared_gf]
path = "../dagster-shared-gf"
editable = true
