[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.dagster]
module_name = "dagster_sap_gf"

# Main project configuration (dagster_sap_gf)
[project]
name = "dagster_sap_gf"
version = "1.0.2"
description = "Dagster sap for GF"
authors = [{ name = "Axell Padilla", email = "brian.padilla@farinter.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
# Development Status :: 1 - Planning
# Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Assets Orchestration",
    "Topic :: Database",
    "Topic :: Data Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Dagster",
]

dependencies = [
    # Polars promovido a core; añadimos extras sugeridos etl, ml y odbc
    "dagster_shared_gf[etl,ml,odbc,polars,monitoring]",
]

[project.optional-dependencies]
external = ["dagster_shared_gf[external]"]

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-env", "mypy", "ruff", "pre-commit", "pyright"]

[tool.uv.build-backend]
module-root = "."
module-name = "dagster_sap_gf"

[tool.setuptools]
packages = ["dagster_sap_gf"]

[tool.setuptools.exclude-package-data]
dagster_sap_gf = ["dagster_sap_gf_tests"]

[project.urls]
Repository = "https://github.com/farinter-analitica/main-dagster"

[tool.uv.sources.dagster_shared_gf]
path = "../dagster-shared-gf"
editable = true

[tool.uv]
override-dependencies = [
    "pyodbc>=5.2.0,<5.3.0", # Python 3.13 necesario por dbt-sqlserver
]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"