[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

# Main project configuration (dagster_shared_gf)
[project]
name = "dagster_shared_gf"
version = "1.0.1"
description = "Dagster shared components for GF"
authors = [{ name = "Axell Padilla", email = "brian.padilla@farinter.com" }]
readme = "README.md"
requires-python = ">=3.12.10"
license = { text = "Proprietary" }
# Development Status :: 1 - Planning
# Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Assets Orchestration",
    "Topic :: Database",
    "Topic :: Data Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Dagster",
]

dependencies = [
    "dagster>=1.9.7,<1.11.3",
    "dbt-core>=1.8,<2.0",
    "dagster-dbt>=0.24",
    "dbt-postgres>=1.8,<2.0",
    "dbt-sqlserver>=1.8.0,<2.0",
    "dagster-webserver>=1.9.7,<2.0",
    "dagster-postgres",
    "dagster-cloud",
    "trycast",
    "pandas",
    "pyodbc",
    "smbprotocol",
    "dagster-polars",
    "patito",
    "dagster-gcp",
    "fastexcel",
    "openpyxl",
    "xlsx2csv",
    "dagster-dlt",
    "dagster-sling",
    "pymongo",
    "pymongoarrow",
    "arrow-odbc",
    "deep-translator",
    "psycopg[binary,pool]",
    "wheel",
    "ipython",
    "psutil",
    "requests",
    "scipy",
    "dlt",
]

[project.optional-dependencies]
external = ["statstools_gf", "algoritmo_mddme_gf"]

[project.urls]
Repository = "https://github.com/farinter-analitica/main-dagster"

[tool.dagster]
module_name = "dagster_shared_gf"

# Permite no necesitar conectarse para la primer evaluacion de dependencias.
dependency-metadata = [
    { name = "statstools_gf" },
    { name = "algoritmo_mddme_gf" },
]

[tool.uv.build-backend]
module-root = "."
module-name = "dagster_shared_gf"

[tool.setuptools]
packages = ["dagster_shared_gf"]

[tool.uv.sources.statstools_gf]
git = "ssh://git@github.com-algoritmos-gf/farinter-analitica/algoritmos-gf.git"
subdirectory = "statstools-gf"
rev = "v1.0.7"

[tool.uv.sources.algoritmo_mddme_gf]
git = "ssh://git@github.com-algoritmos-gf/farinter-analitica/algoritmos-gf.git"
subdirectory = "algoritmo-mddme-gf"
rev = "v1.0.7"
