[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

# Main project configuration (dagster_shared_gf)
[project]
name = "dagster_shared_gf"
version = "1.0.2"
description = "Dagster shared components for GF"
authors = [{ name = "Axell Padilla", email = "brian.padilla@farinter.com" }]
readme = "README.md"
requires-python = ">=3.12, <3.13"  # Relaxed (was >=3.12.10) to avoid patch‑level constraint blocking per-location envs
license = { text = "Proprietary" }
# Development Status :: 1 - Planning
# Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Assets Orchestration",
    "Topic :: Database",
    "Topic :: Data Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Framework :: Dagster",
]

dependencies = [
    # Núcleo mínimo transversal a todas las code locations
    "dagster>=1.9.7,<1.12",
    "dagster-webserver>=1.9.7,<2.0",
    "dagster-postgres",
    "dagster-cloud",
    "dagster-dbt>=0.24",
    "dbt-core>=1.8,<2.0",
    "dbt-postgres>=1.8,<2.0",
    "dbt-sqlserver>=1.8.0,<2.0",
    "trycast",
    "requests",
    "psycopg[binary,pool]",
    "wheel",
    # Ampliado tras análisis automático: utilizados en todas / varias ubicaciones
    "pydantic>=2,<3",
    "pytz",
]

[project.optional-dependencies]
# Extras específicos (ningún paquete listado arriba en core debe repetirse aquí)
external = ["statstools_gf", "algoritmo_mddme_gf"]
excel = ["fastexcel", "openpyxl", "xlsx2csv"]
etl = ["dagster-dlt", "dagster-sling", "dlt"]
gcp = ["dagster-gcp"]
mongo = ["pymongo", "pymongoarrow"]
odbc = ["pyodbc", "arrow-odbc", "smbprotocol", "pymssql"]
translation = ["deep-translator"]
ml = ["scipy"]
interactive = ["ipython"]
monitoring = ["psutil"]
polars = ["dagster-polars<0.27.5", "patito"]
pandas = ["pandas"]

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-env", "mypy", "ruff", "pre-commit", "pyright"]

[project.urls]
Repository = "https://github.com/farinter-analitica/main-dagster"

[tool.dagster]
module_name = "dagster_shared_gf"

# Permite no necesitar conectarse para la primer evaluacion de dependencias.
dependency-metadata = [
    { name = "statstools_gf" },
    { name = "algoritmo_mddme_gf" },
]

[tool.uv.build-backend]
module-root = "."
module-name = "dagster_shared_gf"

[tool.setuptools]
packages = ["dagster_shared_gf"]

[tool.uv.sources.statstools_gf]
git = "ssh://git@github.com-algoritmos-gf/farinter-analitica/algoritmos-gf.git"
subdirectory = "statstools-gf"
rev = "v1.0.7"

[tool.uv.sources.algoritmo_mddme_gf]
git = "ssh://git@github.com-algoritmos-gf/farinter-analitica/algoritmos-gf.git"
subdirectory = "algoritmo-mddme-gf"
rev = "v1.0.7"

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"